modal cuando se agrega un producto al carrito

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -1391,6 +1391,14 @@ footer
   vertical-align middle
   margin-top -10px  
 /**************** Buttons ***************/
+.sweet-alert button
+  background-color #ff7300 !important
+  &:hover
+    background-color #bc5508 !important
+.sweet-alert .cancel
+  background-color #707070 !important
+  &:hover
+    background-color #4b4b4b !important
 .btn-shop
   background-color #f5f5f5
   padding 0 15px
