--- a/app/css/main.css
+++ b/app/css/main.css
@@ -1660,6 +1660,18 @@ footer .contact-sty .download-app > i:hover {
   vertical-align: middle;
   margin-top: -10px;
 }
+.sweet-alert button {
+  background-color: #ff7300 !important;
+}
+.sweet-alert button:hover {
+  background-color: #bc5508 !important;
+}
+.sweet-alert .cancel {
+  background-color: #707070 !important;
+}
+.sweet-alert .cancel:hover {
+  background-color: #4b4b4b !important;
+}
 .btn-shop {
   background-color: #f5f5f5;
   padding: 0 15px;
