redes sociales actualizados

--- a/app/templates/partials/sidebar.html
+++ b/app/templates/partials/sidebar.html
@@ -12,10 +12,15 @@
     <h4 class="widget-title">Síguenos en</h4>
     <div class="box-widget-container" style="padding-bottom: 50px;">
         <ul class="list list-sidebar">
-            <!--<li ng-repeat="item in mainNavMenu">-->
-            <li ng-repeat="item in NavMenuSocial">
+            <li><a href="http://facebook.com/MoonsEnMexico" target="_blank"><i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com/MOONS_AQUARIUMS" target="_blank"><i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://www.instagram.com/moonsmexico/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://www.youtube.com/channel/UCgJdfLAt97jVXdVlzlZNlhQ" target="_blank"><i class="fa fa-youtube"></i></a></li>
+            <li><a href="https://plus.google.com/u/0/108069455211883825420" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/moons-mexico-179aa1145/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+            <!--<li ng-repeat="item in NavMenuSocial">
                 <a href="{{ item.link }}" target="_blank"><i class="{{ item.name }}" data-pack="social"></i></a>
-            </li>
+            </li>-->
         </ul>
     </div>
 </div>
