--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -30,7 +30,8 @@
             <i><img src="img/paypal-1.png" alt="Paypal"></i>
             <i><img src="img/master-card.png" alt="Master card"></i>
             <i><img src="img/american.png" alt="American express"></i>
-             <i><img src="img/oxxo.png" alt="Oxxo"></i>
+            <i><img src="img/visa.png" alt="Visa"></i>
+            <i><img src="img/oxxo.png" alt="Oxxo"></i>
 
         </div>
     </div>    
