--- a/app/templates/shop/partials/cart-details.html
+++ b/app/templates/shop/partials/cart-details.html
@@ -32,35 +32,47 @@
             </table>
             <!--<a class="btn btn-success btn-cart btn-block" ng-click="ShopCart.processPurchase()">Procesar compra</a>-->
         </div>
-    </div>
-</div>
-<hr>
-<div class="col-sm-12 col-md-12" ng-if="Payment.shiping">
-    <h4 class="text-center">Dirección de envío</h4>
-    <div class="details-prodpay">
-        <!--<h4 class="text-center">Resumen de pedido</h4>-->
-        <div class="table-responsive">
-            <table class="table table-striped">
-                <tbody>
-                <tr>
-                    <td>Estado</td>
-                    <td>{{Payment.addresship.stateName}}</td>
-                </tr>
-                <tr>
-                    <td>Ciudad</td>
-                    <td>{{Payment.addresship.cityName}}</td>
-                </tr>
-                <tr>
-                    <td>Dirección</td>
-                    <td>{{Payment.addresship.address}}, {{Payment.addresship.neighborhood }}</td>
-                </tr>
-                <tr>
-                    <td>CP</td>
-                    <td>{{Payment.addresship.zip}}</td>
-                </tr>
-                </tbody>
-            </table>
+        <div class="row">
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="name"></label>
+                    <input type="text" class="form-control"
+                           ng-model="Payment.coupon"
+                           name="name"
+                           placeholder="Código de cupón"
+                           id="name" required/>
+                </div>
+            </div>
+            <div class="col-md-6"><button ng-click="Payment.validCoupon()" class="btn btn-blue">Aplicar</button></div>
         </div>
     </div>
-</div>
+    <hr>
+    <div class="col-sm-12 col-md-12" ng-if="Payment.shiping">
+        <h4 class="text-center">Dirección de envío</h4>
+        <div class="details-prodpay">
+            <!--<h4 class="text-center">Resumen de pedido</h4>-->
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <tbody>
+                    <tr>
+                        <td>Estado</td>
+                        <td>{{Payment.addresship.stateName}}</td>
+                    </tr>
+                    <tr>
+                        <td>Ciudad</td>
+                        <td>{{Payment.addresship.cityName}}</td>
+                    </tr>
+                    <tr>
+                        <td>Dirección</td>
+                        <td>{{Payment.addresship.address}}, {{Payment.addresship.neighborhood }}</td>
+                    </tr>
+                    <tr>
+                        <td>CP</td>
+                        <td>{{Payment.addresship.zip}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 
