--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2484,6 +2484,75 @@ footer .contact-sty .download-app > i:hover {
   background-size: cover;
   background-position: center center;
 }
+.btn-offers {
+  position: fixed;
+  right: 300px;
+  height: 50px;
+  z-index: 999999999;
+  background-color: #ff7300 !important;
+  border-radius: 50px 0 0 50px;
+  font-size: 32px !important;
+  width: 70px;
+  height: 70px;
+  border: 1px solid #ff7300 !important;
+  box-shadow: -5px 5px 13px rgba(0,0,0,0.3);
+}
+.sidebar {
+  width: 300px;
+  position: fixed;
+  top: 200px;
+  bottom: 0;
+  right: 0;
+  z-index: 999;
+  background-color: #ff7300;
+  padding: 0;
+  -webkit-transform: translate3D(300px, 0, 0);
+  transform: translate3D(300px, 0, 0);
+  -webkit-transition: -webkit-transform 300ms ease;
+  transition: -webkit-transform 300ms ease;
+  transition: transform 300ms ease;
+  transition: transform 300ms ease, -webkit-transform 300ms ease;
+}
+.sidebar-open .sidebar {
+  -webkit-transform: none;
+  transform: none;
+}
+#body-sidebar {
+  overflow-y: scroll;
+  height: 500px;
+}
+#body-sidebar::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px #000;
+  background-color: #f00;
+}
+.no-pd-l {
+  padding-left: 0;
+}
+.box-sidebar-promotions {
+  padding: 20px 0;
+  background-color: #fff;
+  margin: 15px 0 0;
+}
+.box-sidebar-promotions h5 {
+  border-bottom: 1px solid #eee;
+}
+.box-sidebar-promotions a,
+.box-sidebar-promotions h5 {
+  margin-bottom: 5px;
+  padding-bottom: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #555;
+}
+.box-sidebar-promotions p {
+  color: #555;
+  font-size: 14px;
+}
+.img-promo-bg {
+  background-size: cover;
+  height: 70px;
+  background-position: center;
+}
 @-moz-keyframes sk-circleBounceDelay {
   0%, 80%, 100% {
     -webkit-transform: scale(0);
