--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -20,14 +20,14 @@
         <div id="body-sidebar" class="container-fluid">
             <div  class="col-md-12 box-sidebar-promotions" ng-repeat="promo in Home.promoCoHome">
                 <div class="col-md-4">
-                    <a post-link="{ link: {url: promo.link, target: '_self'} }">
+                    <a ui-sref="post_detail({slug:promo.slug})">
                         <div class="img-promo-bg" style="background-image: url('{{ promo.featuredImage.url }}')"></div>
                     </a>  
                 </div>
                 <div class="col-md-8 no-pd-l">
-                    <a post-link="{ link: {url: promo.link, target: '_self'} }" ><h5>{{ promo.title }}</h5></a>
-                    <a post-link="{ link: {url: promo.link, target: '_self'} }" href=""><p>{{ promo.excerpt }}</p></a>
-                    <a post-link="{ link: {url: promo.link, target: '_self'} }"><small>Ver más <i class="fa fa-angle-right"></i></small></a>
+                    <a ui-sref="post_detail({slug:promo.slug})" ><h5>{{ promo.title }}</h5></a>
+                    <a ui-sref="post_detail({slug:promo.slug})" href=""><p>{{ promo.excerpt }}</p></a>
+                    <a ui-sref="post_detail({slug:promo.slug})"><small>Ver más <i class="fa fa-angle-right"></i></small></a>
                 </div>
             </div>
         </div>
