--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -18,7 +18,7 @@
                                 <div ng-message="required">Ingrese la contraseña.</div>
                             </div>
                         </div>
-                        <p class="text-center forgot-pass"><a href="">¿Olvidaste la contaseña?</a></p>
+                        <p class="text-center forgot-pass"><a ui-sref="recovery-password">¿Olvidaste la contraseña?</a></p>
 
                         <div class="text-center" style="padding-top: 40px;">
                             <button type="submit" class="btn btn-yellow1" ng-disabled="loginForm.$invalid">
