--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -12,14 +12,15 @@
 <hr class="no-margin">
 <section id="content-area" class="content-blog">
     <div class="content-pages" infinite-scroll='Product.getMorePosts()'
-            infinite-scroll-disabled='Product.busy || !Product.next || Product.loadPosts'>
+         infinite-scroll-disabled='Product.busy || !Product.next || Product.loadPosts'>
         <div class="container">
             <h2 class="title">{{Product.categoryName}}</h2>
-            <hr> 
+            <hr>
             <div class="col-sm-6 col-md-3" ng-repeat="product in Product.list">
                 <div class="box-prod" ng-if="!Product.isPost">
                     <a ui-sref="product-detail({slug:product.slug})" title="Ver detalles del producto">
-                        <div class="bg-prod" style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
+                        <div class="bg-prod"
+                             style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
                     </a>
                     <div class="box-container no-padding container-fluid">
                         <div class="col-sm-12 no-pd-l text-center">
@@ -30,12 +31,16 @@
                     <hr>
                     <div class="container-fluid no-padding">
                         <div class="col-xs-6 no-pd-l">
-                            <a class="btn btn-gray-clear btn-block"  ui-sref="product-detail({slug:product.slug})">Ver más</a>
+                            <a class="btn btn-gray-clear btn-block" ui-sref="product-detail({slug:product.slug})">Ver
+                                más</a>
                         </div>
                         <div class="col-xs-6 no-pd-r">
                             <button class="btn btn-orange btn-block"
-                            ng-click="Product.setItem({id: product.id, image: product.featuredImage.url, name: product.name, price: product.price, qty: 1}, 1)"
-                            ng-disabled="Product.itemInCart(product)">Agregar</button>
+                                    ng-click="Product.setItem({id: product.id, image: product.featuredImage.url,
+                                     name: product.name, price: product.price, qty: 1,
+                                     taxonomies : product.taxonomies}, 1)"
+                                    ng-disabled="Product.itemInCart(product)">Agregar
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -43,7 +48,7 @@
                 <div class="box-prod" ng-if="Product.isPost">
                     <a ui-sref="post_detail({slug:product.slug})">
                         <div class="bg-prod"
-                                style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default }}')"></div>
+                             style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default }}')"></div>
                         <h3 class="prod-descrip">{{product.title}}</h3>
                     </a>
                     <a ui-sref="post_detail({slug: product.slug})" class="btn btn-success btn-cart">Ver más</a>
