--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -69,7 +69,9 @@
                                 </div>
                                 <div class="col-xs-6 no-pd-r">
                                     <button class="btn btn-orange btn-block"
-                                            ng-click="Shop.setItem({id: product.id, image: product.featuredImage.url, name: product.name, price: product.price, qty: 1}, 1)"
+                                            ng-click="Shop.setItem({id: product.id, image: product.featuredImage.url,
+                                             name: product.name, price: product.price, qty: 1,
+                                             taxonomies : product.taxonomies}, 1)"
                                             ng-disabled="Shop.itemInCart(product)">Comprar
                                     </button>
                                 </div>
