add sidebar filters

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -630,7 +630,7 @@ header
   .box-container
     height 100px !important
     p
-      font-size 16px
+      font-size 15px
       margin 15px 0
   .prod-descrip
     color #717171
@@ -925,6 +925,22 @@ header
 
 .see-more
   padding 25px
+.box-widget-white
+  background-color white
+  border none 
+  border-radius 3px
+  box-shadow 0 0 10px rgba(0,0,0,0.05)
+  padding 15px
+  .widget-title-first
+    background #ff7300
+    padding 10px 5px
+    color white !important
+  ul 
+    li > a
+      color #555555
+      text-decoration none
+      &:hover
+        color #ff7300
 .box-widget
   padding 5px 0
   border 1px solid #ccc
@@ -2150,7 +2166,8 @@ footer
 
 .no-pd-l
   padding-left 0
-
+.no-pd-r
+  padding-right 0
 .box-sidebar-promotions
   padding 20px 0
   background-color white
