--- a/app/css/main.css
+++ b/app/css/main.css
@@ -740,7 +740,7 @@ header {
   height: 100px !important;
 }
 .box-prod .box-container p {
-  font-size: 16px;
+  font-size: 15px;
   margin: 15px 0;
 }
 .box-prod .prod-descrip {
@@ -1088,6 +1088,25 @@ color
 }
 .see-more {
   padding: 25px;
+}
+.box-widget-white {
+  background-color: #fff;
+  border: none;
+  border-radius: 3px;
+  box-shadow: 0 0 10px rgba(0,0,0,0.05);
+  padding: 15px;
+}
+.box-widget-white .widget-title-first {
+  background: #ff7300;
+  padding: 10px 5px;
+  color: #fff !important;
+}
+.box-widget-white ul li > a {
+  color: #555;
+  text-decoration: none;
+}
+.box-widget-white ul li > a:hover {
+  color: #ff7300;
 }
 .box-widget {
   padding: 5px 0;
@@ -2527,6 +2546,9 @@ footer .contact-sty .download-app > i:hover {
 }
 .no-pd-l {
   padding-left: 0;
+}
+.no-pd-r {
+  padding-right: 0;
 }
 .box-sidebar-promotions {
   padding: 20px 0;
