--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -14,52 +14,83 @@
     <div class="content-pages" infinite-scroll='Product.getMorePosts()'
          infinite-scroll-disabled='Product.busy || !Product.next || Product.loadPosts'>
         <div class="container">
-            <h2 class="title">{{Product.categoryName}}</h2>
-            <hr>
-            <div class="col-sm-6 col-md-3" ng-repeat="product in Product.list">
-                <div class="box-prod" ng-if="!Product.isPost">
-                    <a ui-sref="product-detail({slug:product.slug})" title="Ver detalles del producto">
-                        <div class="bg-prod"
-                             style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
-                    </a>
-                    <div class="box-container no-padding container-fluid">
-                        <div class="col-sm-12 no-pd-l text-center">
-                            <p>{{product.name}}</p>
-                            <h4>{{ product.price | currency }}</h4>
-                        </div>
+            <div class="col-sm-3">
+                <div class="box-widget-white ng-scope">
+                    <h4 class="widget-title-first">Filtrar por</h4>
+                    <div class="box-widget-container">
+                        <select name="" id="price" class="form-control">
+                           <option value="">Más Vendidos</option>
+                           <option value="">Alfabeticamente de A-Z</option>
+                           <option value="">Precio menor</option>
+                           <option value="">Precio mayor</option>
+                       </select>
                     </div>
-                    <hr>
-                    <div class="container-fluid no-padding">
-                        <div class="col-xs-6 no-pd-l">
-                            <a class="btn btn-gray-clear btn-block" ui-sref="product-detail({slug:product.slug})">Ver
-                                más</a>
-                        </div>
-                        <div class="col-xs-6 no-pd-r">
-                            <button class="btn btn-orange btn-block"
-                                    ng-click="Product.setItem({id: product.id, image: product.featuredImage.url,
-                                     name: product.name, price: product.price, qty: 1,
-                                     taxonomies : product.taxonomies}, 1)"
-                                    ng-disabled="Product.itemInCart(product)">Agregar
-                            </button>
-                        </div>
+                    <h4 class="widget-title">Marcas</h4>
+                    <div class="box-widget-container" style="padding-bottom: 5px;">
+                        <ul class="list">
+                            <li><a href="#" target="_blank"><input type="checkbox"> Animal Planet </a></li>
+                            <li><a href="#" target="_blank"><input type="checkbox"> Happy Pet </a></li>
+                            <li><a href="#" target="_blank"><input type="checkbox"> Pedigree </a></li>
+                        </ul>
+                    </div>
+                    <h4 class="widget-title">Tipos</h4>
+                    <div class="box-widget-container" style="padding-bottom: 5px;">
+                        <ul class="list">
+                            <li><a href="#" target="_blank"><input type="checkbox"> Alimentos </a></li>
+                            <li><a href="#" target="_blank"><input type="checkbox"> Juguetes </a></li>
+                            <li><a href="#" target="_blank"><input type="checkbox"> Accesorios </a></li>
+                        </ul>
                     </div>
                 </div>
-
-                <div class="box-prod" ng-if="Product.isPost">
-                    <a ui-sref="post_detail({slug:product.slug})">
-                        <div class="bg-prod"
-                             style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default }}')"></div>
-                        <h3 class="prod-descrip">{{product.title}}</h3>
-                    </a>
-                    <a ui-sref="post_detail({slug: product.slug})" class="btn btn-success btn-cart">Ver más</a>
+            </div>
+            <div class="col-sm-9 no-padding">
+                <h2 class="title">{{Product.categoryName}}</h2>
+                <hr>
+                <div class="col-sm-6 col-md-4" ng-repeat="product in Product.list">
+                    <div class="box-prod" ng-if="!Product.isPost">
+                        <a ui-sref="product-detail({slug:product.slug})" title="Ver detalles del producto">
+                            <div class="bg-prod"
+                                    style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
+                        </a>
+                        <div class="box-container no-padding container-fluid">
+                            <div class="col-sm-12 no-pd-l text-center">
+                                <p>{{product.name}}</p>
+                                <h4>{{ product.price | currency }}</h4>
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="container-fluid no-padding">
+                            <div class="col-xs-6 no-pd-l">
+                                <a class="btn btn-gray-clear btn-block" ui-sref="product-detail({slug:product.slug})">Ver
+                                    más</a>
+                            </div>
+                            <div class="col-xs-6 no-pd-r">
+                                <button class="btn btn-orange btn-block"
+                                        ng-click="Product.setItem({id: product.id, image: product.featuredImage.url,
+                                            name: product.name, price: product.price, qty: 1,
+                                            taxonomies : product.taxonomies}, 1)"
+                                        ng-disabled="Product.itemInCart(product)">Agregar
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+    
+                    <div class="box-prod" ng-if="Product.isPost">
+                        <a ui-sref="post_detail({slug:product.slug})">
+                            <div class="bg-prod"
+                                    style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default }}')"></div>
+                            <h3 class="prod-descrip">{{product.title}}</h3>
+                        </a>
+                        <a ui-sref="post_detail({slug: product.slug})" class="btn btn-success btn-cart">Ver más</a>
+                    </div>
                 </div>
-            </div>
-            <div class="col-sm-12" ng-show="Product.busy">
-                <h3 class="text-center">Cargando<i class="fa fa-spinner fa-spin"></i></h3>
-            </div>
-            <div class="col-sm-12" ng-show="!Product.busy">
-                <h2 class="text-center no-content" ng-show="!Product.list.length">Lo sentimos no contamos con
-                    contenido disponible</h2>
+                <div class="col-sm-12" ng-show="Product.busy">
+                    <h3 class="text-center">Cargando<i class="fa fa-spinner fa-spin"></i></h3>
+                </div>
+                <div class="col-sm-12" ng-show="!Product.busy">
+                    <h2 class="text-center no-content" ng-show="!Product.list.length">Lo sentimos no contamos con
+                        contenido disponible</h2>
+                </div>
             </div>
         </div>
         <!--post list -->
