filters in products estep 2

--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -19,10 +19,10 @@
                     <h4 class="widget-title-first">Filtrar por</h4>
                     <div class="box-widget-container">
                         <select name="" id="price" class="form-control" ng-model="Product.selectFilter" ng-change="Product.hola()">
-                           <option value="" ng-model="Product.hola1">Más Vendidos</option>
-                           <option value="asc">Alfabeticamente de A-Z</option>
-                           <option value="min">Precio menor</option>
-                           <option value="max">Precio mayor</option>
+                           <option value= "0" ng-model="Product.hola1">Más Vendidos</option>
+                           <option value="1">Alfabeticamente de A-Z</option>
+                           <option value="2">Precio menor</option>
+                           <option value="3">Precio mayor</option>
                        </select>
                     </div>
                     <h4 class="widget-title">Marcas</h4>
