--- a/app/templates/categories.html
+++ b/app/templates/categories.html
@@ -18,7 +18,7 @@
                 <div class="box-widget-white ng-scope">
                     <h4 class="widget-title-first">Filtrar por</h4>
                     <div class="box-widget-container">
-                        <select name="" id="price" class="form-control" ng-model="Product.selectFilter" ng-change="Product.hola()">
+                        <select name="" id="price" class="form-control" ng-model="Product.selectFilter" ng-change="Product.filterbyPice()">
                            <option value= "0" ng-model="Product.hola1">Más Vendidos</option>
                            <option value="1">Alfabeticamente de A-Z</option>
                            <option value="2">Precio menor</option>
