--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -6,7 +6,7 @@
                 <uib-slide ng-repeat="slide in Home.mainSlider">
                     <a post-link="{ link: {url: slide.link, target: '_self'} }">
                         <div class="slider-img"
-                                style="background-image:url('{{ slide.featuredImage.url }}');"></div>
+                             style="background-image:url('{{ slide.featuredImage.url }}');"></div>
                     </a>
                 </uib-slide>
             </uib-carousel>
@@ -16,18 +16,20 @@
 <!-- sidebar float promo -->
 <div ng-class="{'sidebar-open' : visible }">
     <div class="sidebar">
-        <button class="btn btn-primary btn-offers" ng-click="toggleSidebar()">%</button>    
+        <button class="btn btn-primary btn-offers" ng-click="toggleSidebar()">%</button>
         <div id="body-sidebar" class="container-fluid">
-            <div  class="col-md-12 box-sidebar-promotions" ng-repeat="promo in Home.promoCoHome">
+            <div class="col-md-12 box-sidebar-promotions" ng-repeat="promo in Home.promoCoHome">
                 <div class="col-md-4">
                     <a ui-sref="post_detail({slug:promo.slug})">
                         <div class="img-promo-bg" style="background-image: url('{{ promo.featuredImage.url }}')"></div>
-                    </a>  
+                    </a>
                 </div>
                 <div class="col-md-8 no-pd-l">
-                    <a ui-sref="post_detail({slug:promo.slug})" ><h5>{{ promo.title }}</h5></a>
+                    <a ui-sref="post_detail({slug:promo.slug})"><h5>{{ promo.title }}</h5></a>
                     <a ui-sref="post_detail({slug:promo.slug})" href=""><p>{{ promo.excerpt }}</p></a>
-                    <a ui-sref="post_detail({slug:promo.slug})"><small>Ver más <i class="fa fa-angle-right"></i></small></a>
+                    <a ui-sref="post_detail({slug:promo.slug})">
+                        <small>Ver más <i class="fa fa-angle-right"></i></small>
+                    </a>
                 </div>
             </div>
         </div>
@@ -48,9 +50,9 @@
         </div>
         <div class="col-sm-9">
             <div class="box-products" ng-controller="ShoppingCtrl as Shop">
-                <div class="row text-center"> 
+                <div class="row text-center">
                     <div class="col-sm-6 col-md-4" ng-repeat="product in Home.products">
-                        <div class="box-prod">
+                        <div class="box-prod" ng-controller="AccessCtrl as Access">
                             <a ui-sref="product-detail({slug:product.slug})" title="Ver detalles del producto">
                                 <div class="bg-prod"
                                      style="background-image: url('{{product.featuredImage.url ? product.featuredImage.url : initConfig.img_default}}')"></div>
@@ -58,12 +60,12 @@
                             <div class="box-container no-padding container-fluid">
                                 <div class="col-sm-12 no-pd-l text-center">
                                     <p>{{product.name}}</p>
-                                    <h4>{{ product.price | currency }}</h4>
+                                    <h4 ng-if="Access.isAuthenticated()">{{ product.price | currency }}</h4>
                                 </div>
                             </div>
                             <hr>
                             <div class="container-fluid no-padding">
-                                <div class="col-xs-6 no-pd-l">
+                                <div class="no-pd-l" ng-class="Access.isAuthenticated() ? 'col-xs-6': 'col-xs-12'">
                                     <a class="btn btn-gray-clear btn-block"
                                        ui-sref="product-detail({slug:product.slug})">Ver más</a>
                                 </div>
@@ -72,7 +74,7 @@
                                             ng-click="Shop.setItem({id: product.id, image: product.featuredImage.url,
                                              name: product.name, price: product.price, qty: 1,
                                              taxonomies : product.taxonomies}, 1)"
-                                            ng-disabled="Shop.itemInCart(product)">Comprar
+                                            ng-disabled="Shop.itemInCart(product)" ng-if="Access.isAuthenticated()">Comprar
                                     </button>
                                 </div>
                             </div>
@@ -82,7 +84,9 @@
             </div>
         </div>
         <div id="twitter-styl" class="col-sm-3">
-            <a class="twitter-timeline" data-height="900" href="https://twitter.com/MOONS_AQUARIUMS">Tweets by MOONS_AQUARIUMS</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <a class="twitter-timeline" data-height="900" href="https://twitter.com/MOONS_AQUARIUMS">Tweets by
+                MOONS_AQUARIUMS</a>
+            <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
         </div>
     </div>
 </section>
@@ -90,7 +94,7 @@
 <div id="section-promo">
     <div class="container">
         <div class="col-sm-4 item-promo" ng-repeat="promo in Home.promoHome">
-            <div class="box-image-promo" >
+            <div class="box-image-promo">
                 <a post-link="{ link: {url: promo.link, target: '_self'} }">
                     <img src="{{ promo.featuredImage.url }}" alt="Promotions">
                 </a>
