ajuste de contenidos

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -84,7 +84,22 @@ body
   clear both
 
 .go-to-shop
-  margin-top -10px  
+  margin-top -10px
+
+.alert-orange
+  background-color orange
+  margin 25px 0
+  padding 15px
+  border-radius 2px
+  h3
+    color white
+    font-weigh 300
+    font-size 16px
+    line-height 22px
+    strong
+      font-size 20px
+
+
 /************** Grid css******************/
 .divider-main
   margin 15px
