--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -83,10 +83,19 @@
                 </div>
             </div>
         </div>
-        <div id="twitter-styl" class="col-sm-3">
-            <a class="twitter-timeline" data-height="900" href="https://twitter.com/MOONS_AQUARIUMS">Tweets by
-                MOONS_AQUARIUMS</a>
-            <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+        <div class="col-sm-3">
+            <div class="col-md-12 no-padding">
+                <div class="alert-orange">
+                    <h3><i class="fa fa-dollar fa-4x pull-left"></i> En la compra de <strong>$2500</strong> o más el envío es gratuito
+                        en CDMX y área metropolitana.</h3>
+                </div>
+            </div>
+            <div id="twitter-styl" class="col-md-12">
+                <a class="twitter-timeline" data-height="600" href="https://twitter.com/MOONS_AQUARIUMS">Tweets by
+                    MOONS_AQUARIUMS</a>
+                <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
         </div>
     </div>
 </section>
