ajuste de estilos

--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -35,6 +35,22 @@
     </div>    
 </div>
 <div class="text-center bottom-footer">
+    <div class="container no-padding">
+        <div class="col-sm-8">
+            <p>Atención en el chat de Lunes a Viernes de 9:00am - 9:00pm y Sábado y Domingo de 9:00am a 6:30pm</p>
+        </div>
+        <div class="col-sm-4">
+            <ul class="list-social-media">
+                <li><a href="http://facebook.com/MoonsEnMexico" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://twitter.com/MOONS_AQUARIUMS" target="_blank"><i class="fa fa-twitter"></i></a></li>
+                <li><a href="https://www.instagram.com/moonsmexico/" target="_blank"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UCgJdfLAt97jVXdVlzlZNlhQ" target="_blank"><i class="fa fa-youtube"></i></a></li>
+                <li><a href="https://plus.google.com/u/0/108069455211883825420" target="_blank"><i class="fa fa-google-plus"></i></a></li>
+                <li><a href="https://www.linkedin.com/in/moons-mexico-179aa1145/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+            </ul>
+        </div>
+    </div>
+    <hr>
     <p class="white">© 2017 Moons, Todos los Derechos Reservados. <br>
 Tienda Moons Mixhuca: Rio Frío #174 Col. Magdalena Mixhuca, <br>Delegacion Venustiano Carranza, C.P. 15850, CDMX.</p>
 </div>
