add form in home and other thins

--- a/app/css/default.styl
+++ b/app/css/default.styl
@@ -7,6 +7,17 @@ cagreenh = #7e1a1d
 primary = #555555
 monsyellow = #ffa500
 
+
+#facebook-styl
+  iframe
+    width 100%
+.comments
+  border 1px solid #eee
+  margin 25px 0
+  color #555
+  padding 15px
+  h3, label
+    color #555
 .hide-desk
   display none
 .hide-tablet
