--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -91,10 +91,38 @@
                         en CDMX y área metropolitana.</h3>
                 </div>
             </div>
+            <div id="facebook-styl" class="col-md-12 no-padding">
+                <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMoonsCDMX%2F&tabs=timeline&width=300&height=400&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId=510283729125304" width="250" height="400" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowTransparency="true"></iframe>
+            </div>
             <div id="twitter-styl" class="col-md-12">
-                <a class="twitter-timeline" data-height="600" href="https://twitter.com/MOONS_AQUARIUMS">Tweets by
+                <a class="twitter-timeline" data-height="400" href="https://twitter.com/MOONS_AQUARIUMS">Tweets by
                     MOONS_AQUARIUMS</a>
                 <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+            </div>
+            <div class="comments col-sm-12">
+                <h3>¿Tienes dudas?</h3>
+                <form action="">
+                    <div class="form-group">
+                        <label for="name"><i class="fa fa-user"></i> Nombre</label>
+                        <input type="text" id="name" class="form-control" placeholder="Nombre">
+                    </div>
+                    <div class="form-group">
+                        <label for="mobil"><i class="fa fa-whatsapp"></i> Whatsapp</label>
+                        <input type="text" id="mobil" class="form-control" placeholder="Whatsapp">
+                    </div>
+                    <div class="form-group">
+                        <label for="city"><i class="fa fa-map-marker"></i> Selecciona ciudad</label>
+                        <select class="form-control" name="" id="city">
+                            <option value="">México</option>
+                            <option value="">Michoacán</option>
+                            <option value="">Sinaloa</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control" name="" id="message" width="100%" placeholder="Mensaje"></textarea>
+                    </div>
+                    <button class="btn-orange btn-block"><i class="fa fa-envelope"></i> Enviar</button>
+                </form>
             </div>
         </div>
     </div>
