--- a/app/templates/partials/footer.html
+++ b/app/templates/partials/footer.html
@@ -23,6 +23,7 @@
                     <a class="contact-foo-side" href="{{ post.excerpt }}"><i class="{{ post.title }}"></i> <span
                             ng-bind-html="post.content | trustHtml"></span></a>
                 </li>
+                <li>Atención en el chat de Lunes a Viernes de 9 a 21 hrs y Sábado y Domingo de 9 a 18:30 hrs </li>
             </ul>
         </div>
         <div class="col-sm-3 contact-sty payment-type">
@@ -35,22 +36,6 @@
     </div>    
 </div>
 <div class="text-center bottom-footer">
-    <div class="container no-padding">
-        <div class="col-sm-8">
-            <p>Atención en el chat de Lunes a Viernes de 9:00am - 9:00pm y Sábado y Domingo de 9:00am a 6:30pm</p>
-        </div>
-        <div class="col-sm-4">
-            <ul class="list-social-media">
-                <li><a href="http://facebook.com/MoonsEnMexico" target="_blank"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="https://twitter.com/MOONS_AQUARIUMS" target="_blank"><i class="fa fa-twitter"></i></a></li>
-                <li><a href="https://www.instagram.com/moonsmexico/" target="_blank"><i class="fa fa-instagram"></i></a></li>
-                <li><a href="https://www.youtube.com/channel/UCgJdfLAt97jVXdVlzlZNlhQ" target="_blank"><i class="fa fa-youtube"></i></a></li>
-                <li><a href="https://plus.google.com/u/0/108069455211883825420" target="_blank"><i class="fa fa-google-plus"></i></a></li>
-                <li><a href="https://www.linkedin.com/in/moons-mexico-179aa1145/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-            </ul>
-        </div>
-    </div>
-    <hr>
     <p class="white">© 2017 Moons, Todos los Derechos Reservados. <br>
 Tienda Moons Mixhuca: Rio Frío #174 Col. Magdalena Mixhuca, <br>Delegacion Venustiano Carranza, C.P. 15850, CDMX.</p>
 </div>
