--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -104,22 +104,22 @@
                 <form action="">
                     <div class="form-group">
                         <label for="name"><i class="fa fa-user"></i> Nombre</label>
-                        <input type="text" id="name" class="form-control" placeholder="Nombre">
+                        <input type="text" id="name" class="form-control" placeholder="Nombre" required>
                     </div>
                     <div class="form-group">
                         <label for="mobil"><i class="fa fa-whatsapp"></i> Whatsapp</label>
-                        <input type="text" id="mobil" class="form-control" placeholder="Whatsapp">
+                        <input type="text" id="mobil" class="form-control" placeholder="Whatsapp" required>
                     </div>
                     <div class="form-group">
                         <label for="city"><i class="fa fa-map-marker"></i> Selecciona ciudad</label>
-                        <select class="form-control" name="" id="city">
+                        <select class="form-control" name="" id="city" required>
                             <option value="">México</option>
                             <option value="">Michoacán</option>
                             <option value="">Sinaloa</option>
                         </select>
                     </div>
                     <div class="form-group">
-                        <textarea class="form-control" name="" id="message" width="100%" placeholder="Mensaje"></textarea>
+                        <textarea class="form-control" name="" id="message" width="100%" placeholder="Mensaje" required></textarea>
                     </div>
                     <button class="btn-orange btn-block"><i class="fa fa-envelope"></i> Enviar</button>
                 </form>
