--- a/app/templates/shop/shopcart.html
+++ b/app/templates/shop/shopcart.html
@@ -71,7 +71,7 @@
                         </table>
                     </div>
                     <!--<a class="btn btn-success btn-paypal btn-block"><i class="fa fa-paypal"></i> Pagar con Paypal</a>-->
-                    <a class="btn btn-success btn-blue btn-block" ng-click="ShopCart.processPurchase()"><i class="fa fa-credit-card"></i> Procesar compra</a>
+                    <a class="btn btn-orange btn-block" ng-click="ShopCart.processPurchase()"><i class="fa fa-credit-card"></i> Procesar compra</a>
                 </div>
             </div>
         </div>
